--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
-  	<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>端傳媒會員計劃</title>
     <meta name="keywords" content="the initium membership,Initium Membership,端,端會員,Initium,Initium Media">
     <meta name="description" content="我們想找到你們，需要你們的支持；我們更想創造一個空間，讓你們找到彼此。">
@@ -98,23 +98,23 @@
       </div>
       <div class="mask">
         <div class="basic column">
-          <p class="bold">限時特惠</p>
-          <div class="column-container-2">
-              <p><span class="line_through">HK$ 49/月</span> HK$ 28/月</p>
-              <a class="subscribe" href="https://theinitium.com/subscription/checkout/basic_monthly" target="_blank">暢讀會員</a>
+          <p class="bold">暢讀會員</p>
+          <div class="column-container">
+            <div class="monthly">
+              <p>HK$ 49/月</p>
+              <a class="subscribe" href="https://theinitium.com/subscription/checkout/basic_monthly" target="_blank">加入會員</a>
+            </div>
+            <div class="yearly">
+              <p>HK$ 498/年</p>
+              <a class="subscribe" href="https://theinitium.com/subscription/checkout/basic_yearly_original" target="_blank">加入會員</a>
+            </div>
           </div>
         </div>
         <div class="premier column">
-          <p class="bold">年付會員</p>
-          <div class="column-container">
-            <div class="monthly">
-              <p>HK$ 498/年</p>
-              <a class="subscribe" href="https://theinitium.com/subscription/checkout/basic_yearly_original" target="_blank">暢讀會員</a>
-            </div>
-            <div class="yearly">
-              <p>HK$ 998/年</p>
-              <a class="subscribe" href="https://theinitium.com/subscription/checkout/premium_yearly_original" target="_blank">尊享會員</a>
-            </div>
+          <p class="bold">尊享會員</p>
+          <div class="column-container-2">
+            <p>HK$ 998/年</p>
+            <a class="subscribe" href="https://theinitium.com/subscription/checkout/premium_yearly_original" target="_blank">加入會員</a>
           </div>
         </div>
       </div>
@@ -201,7 +201,7 @@
       <hr>
       <div class="plansrow">
         <div class="plan">
-          <!-- <div class="illustration"><img src="img/basic.jpg" alt=""></div> -->
+          <div class="illustration"><img src="img/basic.jpg" alt=""></div>
             <ul class="description">
               <h2 class="bold">暢讀會員</h2>
               <li>暢讀全站內容</li>
@@ -211,7 +211,7 @@
             </ul>
         </div>
         <div class="plan">
-          <!-- <div class="illustration"><img src="img/premier.jpg" alt=""></div> -->
+          <div class="illustration"><img src="img/premier.jpg" alt=""></div>
             <ul class="description">
                 <h2 class="bold">尊享會員</h2>
                 <li>暢讀全站內容</li>
@@ -224,10 +224,6 @@
               </ul>
         </div>
       </div>
-      <a target="_blank" href=" https://theinitium.com/subscription/offers/">
-        <div class="illustration desk"><img src="img/discount.jpg" alt=""></div>
-        <div class="illustration mobile"><img src="img/discount-mobile.jpg" alt=""></div>
-      </a>
       <a class="subscribe dark" target="_blank" href=" https://theinitium.com/subscription/offers/">加入會員</a>
       <!-- <div class="row">
         <a class="subscribe" href="https://theinitium.com/subscription/offers/" target="_blank">成為會員</a>
@@ -331,36 +327,12 @@
           <p>循主站加入的會員，購買的同時會啓動自動續費，並在會籍到期後根據所參與的方案自動扣款，並延續會籍。您可以到網頁版的「個人中心 - 付費管理」中取消自動續費。非主站購買的會員，無法自動續費，需重新下單。</p>
         </div>
         <div class="question" id="q5">
-          <p>除了 PayPal 和信用卡，是否支持支付寶、微信支付？</p>
-        </div>
-        <div class="answer">
-          <p>我們支持支付寶付款。在<a class="giftlink" target="_blank" href="https://theinitium.com/subscription/offers/">選定會員方案</a>後，你可以選擇「支付寶」並會跳轉到「端 Mall」，成功支付後，您會收到<購買確認信>。您的會籍會在 1-2 個工作日生效並收到<生效通知>，請耐心等待。我們目前尚未開通微信支付。</p>
-        </div>
-        <div class="question" id="q6">
-          <p>是否有線下的支付方式？</p>
-        </div>
-        <div class="answer">
-          <p>身在香港或台灣的讀者，可選擇以匯款、支票的方式付費，亦可親臨我們的辦公室以現金購買。請將有效的支票、匯款單據，連同填妥的 <訂閱表格>一併寄給我們即可。訂閱表格和辦公室地址，請聯繫 membership@theinitium.com 獲取。</p>
-        </div>
-        <div class="question" id="q7">
-          <p>成功購買「端會員」後會發生什麼？</p>
-        </div>
-        <div class="answer">
-          <p>在主站支付成功後，您的會籍會立即生效；在非主站渠道（含「端 Mall」）支付，會於 收到款項後的 1-2 個工作日內生效會籍；生效時，您會收到確認郵件，並且在「個人中心」頁面顯示會員身份（金色星標），登入狀態下可以暢讀全站內容。</p>
-        </div>
-        <div class="question" id="q8">
-          <p>可以自動續費嗎？</p>
-        </div>
-        <div class="answer">
-          <p>循主站加入的會員，購買的同時會啓動自動續費，並在會籍到期後根據所參與的方案自動扣款，並延續會籍。您可以到網頁版的「個人中心 - 付費管理」中取消自動續費。非主站購買的會員，無法自動續費，需重新下單。</p>
-        </div>
-        <div class="question" id="q9">
           <p>若我已是會員，可否重新購買、或升級現有方案？</p>
         </div>
         <div class="answer">
           <p>可以。請留意，新方案會在生效的同時會覆蓋舊方案，舊方案的剩餘會籍會失效。即使是升級方案（如從月付到年付、從暢讀到尊享），舊方案也會失效且不設退款。</p>
         </div>
-        <div class="question" id="q10">
+        <div class="question" id="q6">
           <p>端傳媒×獨立書店 Super Pass 可以在哪些書店使用？</p>
         </div>
         <div class="answer">
@@ -414,6 +386,11 @@
           <p>微信：minitium</p>
         </div>
       </div>
+    </div>
+    <!-- <div class="footer">
+
+    </div> -->
+
     </div>
   </body>
   <script>
