--- a/index.html
+++ b/index.html
@@ -201,30 +201,29 @@
       <hr>
       <div class="plansrow">
         <div class="plan">
-          <div class="illustration"><img src="img/basic.jpg" alt=""></div>
-            <ul class="description">
-              <h2 class="bold">暢讀會員</h2>
-              <li>暢讀全站內容</li>
-              <li><a class="giftlink" id="bsbtn">SuperPass 獨立書店優惠</a></li>
-              <li>端會員通訊</li>
-              <li>端會員社群</li>
-            </ul>
-        </div>
-        <div class="plan">
           <div class="illustration"><img src="img/premier.jpg" alt=""></div>
             <ul class="description">
                 <h2 class="bold">尊享會員</h2>
-                <li>暢讀全站內容</li>
-                <li><a class="giftlink" id="bsbtn2">SuperPass 獨立書店優惠</a></li>
-                <li>端會員通訊</li>
-                <li>尊享會員精品小群</li>
-                <li>尊享會員線上興趣小組</li>
-                <li>端線下活動優先、優惠</li>
+                <li>暢讀「端 × 華爾街日報」</li>
                 <li>端旅行、端 Mall 購物折扣</li>
+                <li>端線下活動優先、優惠</li>
+                <li>尊享會員精品小群</li>
+                <li>+ 全部暢讀會員福利</li>
               </ul>
         </div>
+        <div class="plan">
+          <div class="illustration"><img src="img/basic.jpg" alt=""></div>
+            <ul class="description">
+              <h2 class="bold">暢讀會員</h2>
+              <li>暢讀端全站內容</li>
+              <li><a class="giftlink" id="bsbtn">SuperPass 獨立書店優惠</a></li>
+              <li>精選專題推送</li>
+              <li>全球端會員智識社群</li>
+            </ul>
+        </div>
       </div>
-      <a class="subscribe dark" target="_blank" href=" https://theinitium.com/subscription/offers/">加入會員</a>
+      <div>＊ 暢讀會員分年付、月付方案，且可隨時補差價升級至尊享會員。</div>
+      <a class="subscribe dark" target="_blank" href="https://theinitium.com/subscription/offers/">加入會員</a>
       <!-- <div class="row">
         <a class="subscribe" href="https://theinitium.com/subscription/offers/" target="_blank">成為會員</a>
         <p class="price">現正眾籌</p>
@@ -312,70 +311,119 @@
           <p>是否有線下的支付方式？</p>
         </div>
         <div class="answer">
-          <p>身在香港或台灣的讀者，可選擇以匯款、支票的方式付費，亦可親臨我們的辦公室以現金購買。請將有效的支票、匯款單據，連同填妥的 <訂閱表格>一併寄給我們即可。訂閱表格和辦公室地址，請聯繫 membership@theinitium.com 獲取。</p>
+          <p>身在香港或台灣的讀者，可選擇以匯款、支票的方式付費，亦可親臨我們的辦公室以現金購買。請將有效的支票、匯款單據，連同填妥的<訂閱表格>一併寄給我們即可。訂閱表格和辦公室地址，請聯繫 membership@theinitium.com 獲取。</p>
         </div>
         <div class="question" id="q3">
+          <p>我見到價格是以港幣結算，可以用其它貨幣支付嗎？</p>
+        </div>
+        <div class="answer">
+          <p>可以，任何線上支付方式都會自動換算為您的所在地貨幣，而對於線下支付，<訂閱表格>中分別列明了港幣和台幣的價格。</p>
+        </div>
+        <div class="question" id="q4">
           <p>成功購買「端會員」後會發生什麼？</p>
         </div>
         <div class="answer">
-          <p>在主站支付成功後，您的會籍會立即生效；在非主站渠道（含「端 Mall」）支付，會於 收到款項後的 1-2 個工作日內生效會籍；生效時，您會收到確認郵件，並且在「個人中心」頁面顯示會員身份（金色星標），登入狀態下可以暢讀全站內容。</p>
+          <p>在主站支付成功後，您的會籍會立即生效；在非主站渠道（如「端 Mall」、線下）支付，會籍會於款項收悉的 1-2 個工作日內（不包括香港的法定假期）生效。生效同時，您會收到<會籍生效通知>，登入後可在「個人中心」頁面見到會員標識（金色星星），即可暢讀全站內容。</p>
         </div>
-        <div class="question" id="q4">
+        <div class="question" id="q5">
           <p>可以自動續費嗎？</p>
         </div>
         <div class="answer">
-          <p>循主站加入的會員，購買的同時會啓動自動續費，並在會籍到期後根據所參與的方案自動扣款，並延續會籍。您可以到網頁版的「個人中心 - 付費管理」中取消自動續費。非主站購買的會員，無法自動續費，需重新下單。</p>
+          <p>循主站加入的會員，購買的同時會開啓自動續費，在會籍到期時根據所參與的方案自動扣款，並延續會籍。您可以到網頁版的「個人中心 - 付費管理」中管理續費狀態。非主站購買的會員，無法自動續費，需重新下單。</p>
         </div>
-        <div class="question" id="q5">
+
+
+        <div class="question" id="q6">
+          <p>成為「端尊享會員」後，如何啓用我的「華爾街日報」會籍？</p>
+        </div>
+        <div class="answer">
+          <p>會籍生效時，您會收到一封由端寄出的<會籍生效通知>，點擊信中的「領取華爾街日報會籍」鏈接後，「華爾街日報」會直接發送含有啟動碼的電郵到您的郵箱。按該郵件中的指引即可開通華爾街日報會籍。若您錯過了郵件，亦可直接在網頁版「用戶中心 - 付費管理」中點擊「領取華爾街日報會籍」，進入上述流程。</p>
+        </div>
+        <div class="question" id="q7">
+          <p>端尊享會員的「華爾街日報」會籍如何計算？</p>
+        </div>
+        <div class="answer">
+          <p>您所獲贈的「華爾街日報會籍」與您的「端尊享會員會籍」同步，例如，您於 1 月 1 日成為一年期的端尊享會員，在此後的會期內無論您何時開通華爾街日報會籍，您暢讀端與華爾街日報兩份媒體的權限，都會於次年 1 月 1 日同時結束。</p>
+        </div>
+        <div class="question" id="q8">
+          <p>如我已是華爾街日報會員，又購入了端尊享會員，我的華爾街日報會籍是否能延長？</p>
+        </div>
+        <div class="answer">
+          <p>不能。您獲贈的「「華爾街日報會籍」將與您所購買的「端尊享會員會籍」同步，無法轉移至別的賬戶，若您已是「華爾街日報」會員，建議您購買「暢讀會員」。</p>
+        </div>
+        <div class="question" id="q9">
+          <p>我在端與華爾街日報開始合作前已是尊享會員，我的會籍如何計算？</p>
+        </div>
+        <div class="answer">
+          <p>上述計算方法依然適用，從 2017 年 12 月起，您亦可以獲得「華爾街日報會籍」，並持續至「端尊享會員會籍」結束日。詳細領取及使用方法，請參見我們發送給您的郵件。</p>
+        </div>
+        <div class="question" id="q10">
+          <p>若我已是暢讀會員，可否升級現有方案？</p>
+        </div>
+        <div class="answer">
+          <p>若您從主站直接購買、並且仍然處在自動續費中，就可以升級現有方案。無論您是月付、還是年付的暢讀會員，都可以補差價成為尊享會員。請留意，您新獲得的方案是以升級日為起點的完整會籍，而非將會籍中剩餘的天數升級。差價計算公式如下：</p>
+          <p class="form"> ＊ 差價 = 一年「端尊享會員會籍」的時價 - 您剩餘「端暢讀會員會籍」的對應價值</p>
+          <p>若您既有的會籍非主站購買、或已經取消自動續費，請聯繫 <a class="giftlink" target="_blank" href="mailto:membership@theinitium.com">membership@theinitium.com</a> 進行升級。</p>
+        </div>
+
+
+
+
+        <div class="question" id="q11">
           <p>若我已是會員，可否重新購買、或升級現有方案？</p>
         </div>
         <div class="answer">
-          <p>可以。請留意，新方案會在生效的同時會覆蓋舊方案，舊方案的剩餘會籍會失效。即使是升級方案（如從月付到年付、從暢讀到尊享），舊方案也會失效且不設退款。</p>
+          <p>可以，您可於任何時間再次購入會籍。但請留意，除非您從始至終都使用「端 Mall」進行購買，否則您新購買的會籍將會覆蓋（取代）既有的會籍，舊會籍將會於新會籍生效時立即失效，所以我們強烈建議您不要如此做。</p>
         </div>
-        <div class="question" id="q6">
-          <p>端傳媒×獨立書店 Super Pass 可以在哪些書店使用？</p>
-        </div>
-        <div class="answer">
-          <p>書店清單和優惠細則在<a class="giftlink" target="_blank" href="https://theinitium.com/article/membership-bookstore-list/">這裏</a>（不斷增長中……），若您是店家，歡迎來函與我們洽談合作事宜：membership@theinitium.com。</p>
-        </div>
-        <div class="question" id="q7">
-          <p>我該如何在合作店家或活動現場認證我的會員身份？</p>
+
+
+        <div class="question" id="q12">
+          <p>成為會員後，我該如何加入會員社群？</p>
         </div>
         <div class="answer">
-          <p>出示電子會員身份識別，即網站和 App 的個人中心頁面中的金色星標。</p>
+          <p>加入會員後，我們會聯絡你，邀請你加入我們的 Facebook 社群。尊享會員可以額外加入專屬的精品小群，以及線上興趣小組。</p>
         </div>
-        <div class="question" id="q8">
-          <p>我是尊享會員，該怎麼加入「端尊享會員」社群？</p>
-        </div>
-        <div class="answer">
-          <p>加入會員後，我們會聯絡你，邀請你加入我們的 Facebook / WhatsApp 社群。</p>
-        </div>
-        <div class="question" id="q9">
-          <p>在「端尊享會員」社群裏有什麼？</p>
+        <div class="question" id="q13">
+          <p>成為會員後，我該如何加入會員社群？</p>
         </div>
         <div class="answer">
           <p>可以在「端會員」社群裏發帖、跟其他會員交流，參與線上直播或互動。端傳媒的編輯、撰稿人們也將不定期進入社群，跟大家交流；</p>
           <p>有任何建議、疑問，都可以在社群中留言，我們會一一回覆。</p>
         </div>
-        <div class="question" id="q10">
+        <div class="question" id="q14">
           <p>如何獲得活動的優先報名資格？</p>
         </div>
         <div class="answer">
           <p>當我們舉辦活動，會不定期通過郵件和社群向會員發送活動訊息和參與方式。</p>
         </div>
-        <div class="question" id="q11">
+        <div class="question" id="q15">
           <p>我住在大陸或海外，該如何參加尊享會員的社群活動呢？</p>
         </div>
         <div class="answer">
           <p>我們的辦公室設在香港、台灣，所以目前舉辦的線下活動或聚會，會以兩地為主。但我們會盡力為活動安排視頻直播，並且歡迎全球各地的會員通過網路連入，一起參與。</p>
+
+
+        <div class="question" id="q16">
+          <p>端傳媒×獨立書店 Super Pass 可以在哪些書店使用？</p>
         </div>
-        <div class="question" id="q12">
+        <div class="answer">
+          <p>書店清單和優惠細則在<a class="giftlink" target="_blank" href="https://theinitium.com/article/membership-bookstore-list/">這裏</a>（不斷增長中……），若您是店家，歡迎來函與我們洽談合作事宜：membership@theinitium.com。</p>
+        </div>
+        <div class="question" id="q17">
+          <p>我該如何在合作店家或活動現場認證我的會員身份？</p>
+        </div>
+        <div class="answer">
+          <p>出示電子會員身份識別，即網站和 App 的個人中心頁面中的金色星標。</p>
+        </div>
+        
+        </div>
+        <div class="question" id="q18">
           <p>會員項目會持續多久？</p>
         </div>
         <div class="answer">
           <p>如無重大變故，我們的會員項目將一直持續。當本項目因故無法進行時，本公司保有修改、變更或暫停本項目的權利。如有未盡事宜，悉依本公司相關規定或解釋辦理，並得隨時補充公告之。詳盡的「服務協議」和「付費會員銷售條款」請點擊<a target="_blank" class="giftlink" href="https://theinitium.com/misc/agreement/">這裏</a>。</p>
         </div>
-        <div class="question" id="q13">
+        <div class="question" id="q19">
           <p>還有問題？</p>
         </div>
         <div class="answer">
