--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
           <p>成為「端尊享會員」後，如何啓用我的「華爾街日報」會籍？</p>
         </div>
         <div class="answer">
-          <p>會籍生效時，您會收到一封由端寄出的<會籍生效通知>，點擊信中的「領取華爾街日報會籍」鏈接後，「華爾街日報」會直接發送含有啟動碼的電郵到您的郵箱。按該郵件中的指引即可開通華爾街日報會籍。若您錯過了郵件，亦可直接在網頁版「用戶中心 - 付費管理」中點擊「領取華爾街日報會籍」，進入上述流程。</p>
+          <p>會籍生效時，您會收到一封由端寄出的<會籍生效通知>，點擊信中的「領取華爾街日報會籍」鏈接後，「華爾街日報」會直接發送含有啟動鏈接的電郵到您的郵箱。按該郵件中的指引即可開通華爾街日報會籍。若您錯過了郵件，亦可直接在網頁版「用戶中心 - 付費管理」中點擊「領取華爾街日報會籍」，進入上述流程。</p>
         </div>
         <div class="question" id="q7">
           <p>端尊享會員的「華爾街日報」會籍如何計算？</p>
@@ -349,7 +349,7 @@
           <p>如我已是華爾街日報會員，又購入了端尊享會員，我的華爾街日報會籍是否能延長？</p>
         </div>
         <div class="answer">
-          <p>不能。您獲贈的「「華爾街日報會籍」將與您所購買的「端尊享會員會籍」同步，無法轉移至別的賬戶，若您已是「華爾街日報」會員，建議您購買「暢讀會員」。</p>
+          <p>不能。您獲贈的「 華爾街日報會籍」將與您所購買的「端尊享會員會籍」同步，無法轉移至別的賬戶，若您已是「華爾街日報」會員，建議您購買「暢讀會員」。</p>
         </div>
         <div class="question" id="q9">
           <p>我在端與華爾街日報開始合作前已是尊享會員，我的會籍如何計算？</p>
